# routes/api.go
@@ -3,6 +3,7 @@ package routes
 import (
 	"auth-service/actions"
 	"auth-service/actions/login"
+	"auth-service/actions/token"
 	"auth-service/server"
 
 	"github.com/gorilla/mux"
@@ -20,6 +21,8 @@ func RegisterAPIRoutes(router *mux.Router, server *server.APIServer) *mux.Router
 
 	router.HandleFunc("/health", actions.HandleAPIHealth(server)).Methods("GET")
 	router.HandleFunc("/login", login.HandleLogin(server)).Methods("POST")
+
+	router.HandleFunc("/token", token.Handle(server)).Methods("POST")
 
 	router.PathPrefix("/swagger").Handler(httpSwagger.WrapHandler)
 
